# Olly

./: CMakeLists.txt  OliverLangConfig.h.in  README.md  __notes__.md
.github/workflows/: codeql-analysis.yml
MainFunction/: CMakeLists.txt  main_function.cpp  main_function.h
Main_Function/: main_function.cpp  main_function.h
Oliver/: CMakeLists.txt  Oliver.cpp  Olly.cpp  Olly.h
Oliver/interpreter/compiler/: compiler.h  parser.h
Oliver/interpreter/compiler/readers/: text_reader.h  token_reader.h
Oliver/interpreter/evaluator/: binary_operators.h  evaluator.h  function_operators.h  unary_operators.h
Oliver/interpreter/let/: let.h
Oliver/interpreter/let/base_configuration/: op_codes.h  regex_strings.h  system_fundamentals.h
Oliver/interpreter/let/fundamental_types/: error.h  expression.h  lambda.h  logical_term.h  number.h  op_call.h  string.h  symbol.h
Oliver_Lang/: Oliver.h  Olliver.h
Oliver_Lang/Components/: file_writer.h  parser.h  string_support_functions.h  text_parser.h  text_reader.h  token_reader.h
Oliver_Lang/Components/Compiler/: compiler.h
Oliver_Lang/Components/Compiler/Data_Types/: let (conflicted).h  let.h
Oliver_Lang/Components/Compiler/Data_Types/base_configuration/: op_codes.h  regex_strings.h  system_fundamentals.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/: error.h  expression.h  lambda.h  list.h  logical_term.h  map.h  number.h  op_call.h  string.h  symbol.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/: integer_value.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/bit_register/: bit_register.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/decimal/: decimal.cpp  decimal.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/decimal/real_see_README/: README.txt  real.cpp  real.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/num_type/: num_type.cpp  num_type.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/numeric_type/: numeric_type.cpp  numeric_type.h
Oliver_Lang/Components/Compiler/Data_Types/fundamental_types/support_types/mpa/whole_number/: whole_number.cpp  whole_number.h
Oliver_Lang/Components/Evaluator/: associative_operators.h  binary_operators.h  evaluator.h  function_operators.h  fundamental_operators.h  sequence_operators.h  unary_operators.h
